[package]
name = "ex_auction"
version = "0.0.1"
authors = ["Sergey Shelukhin <qshell@ya.ru>"]
repository = "https://bitbucket.org/qshell/ex_auction"
readme = "README.md"

[dependencies]
exonum = "0.9.1"
exonum_sodiumoxide = "0.0.20"
serde = "1.0.0"
serde_json = "1.0.0"
serde_derive = "1.0.0"
failure = "0.1.1"

[dev-dependencies]
exonum-testkit = "0.9.1"
rand = "=0.5.5"
pretty_assertions = "=0.5.1"
assert_matches = "1.2.0"